<resources>
    <string name="app_name">PowerMap</string>
    <string name="maps_key">AIzaSyCN2c343t_dg98fYSpNnjy9KbASfQit2rc</string>
    <string name="your_location">Sua localização!</string>

    <string name="data_car_error">Nenhum carro encontrado!</string>
    <string name="data_model_error">Nenhum modelo encontrado!</string>
    <string name="data_user_error">Nenhum usuário encontrado!</string>
    <string name="data_schedule_error">Nenhum agendamento encontrado!</string>


    <string name="invalid_auth"> Credenciais inválidas </string>
    <string name="back">Voltar</string>
    <string name="select">Selecionar</string>
    <string name="add">Adicionar </string>
    <string name="edit">Editar </string>
    <string name="remove">Remover </string>
    <string name="see">Visualizar </string>
    <string name="back_button">Botão de Voltar </string>
    <string name="image_button">Botão de Adicionar Imagem</string>
    <string name="image_not_found">Imagem não encontrada!</string>
    <string name="error_data">Houve um erro na submissão de dados! Tente novamente mais tarde.</string>
    <string name="error_data_delete">Houve um erro ao deletar registro! Tente novamente mais tarde.</string>
    <string name="enter">Entrar</string>
    <string name="create">Criar</string>
    <string name="register">Registrar</string>
    <string name="name">Nome completo</string>
    <string name="email">Email</string>
    <string name="Password">Senha</string>
    <string name="password_confirm">Confirme a senha</string>
    <string name="enter_google">Entre com o Google</string>
    <string name="edit_password">Editar senha</string>
    <string name="add_img">Adicionar imagem</string>
    <string name="connectionError">Sem conexão!</string>
    <string name="successLogin">Login feito com sucesso!</string>
    <string name="notfound">Não encontrado</string>
    <string name="logout">Sair</string>
    <string name="phone">Telefone</string>
    <string name="not_phone_saved">Não há telefone salvo</string>
    <string name="delete_account">Deletar Conta</string>
    <string name="new_password">Nova senha</string>
    <string name="old_password">Senha antiga</string>
    <string name="error_admin_register">Somente Admins podem adicionar novos Admins!</string>
    <string name="welcome">Bem Vindo(a) de volta</string>
    <string name="success_edit">Perfil editado com sucesso!</string>
    <string name="email_already_not_error">Email não registrado!</string>
    <string name="forgot_password">Esqueceu a senha?</string>


    <!-- Decoração -->
    <string name="text_decoreition_initial">Encontre o melhor lugar para recarregar as energias do seu carro!</string>
    <string name="title_decoreition_initial">Seja Bem Vindo  ao PowerMap</string>
    <string name="title_decoreition_login">Entre Com  Sua Conta</string>
    <string name="subtext_decoreition_login">Não possui conta?</string>
    <string name="subtext_decoreition_login_two">Faça registro</string>
    <string name="text_decoreition_login_two">Energia é o que o seu carro precisa!</string>
    <string name="or">ou</string>
    <string name="subtext_decoreition_register">Já possui conta?</string>
    <string name="title_decoreition_register">Registre-se</string>
    <string name="subtext_decoreition_register_two">Entre</string>
    <string name="text_decoreition_register">Mantenha o controle assim como controla o volante!</string>
    <string name="title_decoreition_register_admin">Registrar Admin</string>


    <!-- Register -->

    <string name="name_error_register">É necessário informar o seu nome!</string>
    <string name="email_error">É necessário informar o e-mail!</string>
    <string name="password_error">É necessário informar a senha!</string>
    <string name="password_confirm_error">Confirme a senha de forma correta!</string>
    <string name="password_length_error">A senha precisa ter no minimo 8 caracteres!</string>
    <string name="password_alpha_numeric_error">A senha precisa conter letras e números!</string>
    <string name="password_symbol_error">A senha precisa conter símbolos!</string>
    <string name="password_mismatch_error">Senha não existe!</string>
    <string name="name_invalid_error">É necessário informar pelo menos o seu nome e sobrenome!</string>
    <string name="email_invalid_error">E-mail inválido!</string>
    <string name="success_register">Registro feito com sucesso!</string>
    <string name="email_already_registered_error">E-mail já registrado. Faça login!</string>
    <string name="fields_required">Todos os campos são obrigatórios</string>
    <string name="error_register">Erro, tente novamente!</string>
    <string name="old_same_password">A senha informada é igual a antiga!</string>
    <string name="title_notification">Power MAP agenda</string>
    <string name="description_schedule">Descrição da agenda</string>
    <string name="repetition">Repetição</string>
    <string name="yearly">Anual</string>
    <string name="weekly">Semanal</string>
    <string name="monthly">Mensal</string>
    <string name="once">Uma vez</string>

    <!--Schedule-->

    <string name="date_required">É necessário informar a data!</string>
    <string name="time_required">É necessário informar o hotário!</string>
    <string name="description_required">É necessário informar a descrição!</string>
    <string name="radio_required">É necessário selecionar uma repetição!</string>
    <string name="date_future">Informe uma data futura!</string>
    <string name="date_standard">Informe uma data válida!</string>
    <string name="time_standard">Informe um horário válido!</string>


    <!-- Menu -->
    <string name="profile">Perfil</string>
    <string name="car">Carro</string>
    <string name="schedule">Agenda</string>
    <string name="map">Mapa</string>
    <string name="users">Usuários</string>
    <string name="models">Modelos</string>

    <!-- Car Model-->
    <string name="search_model">Pesquisar modelo...</string>
    <string name="eletric">Elétrico</string>
    <string name="hybrid">Hibrído</string>
    <string name="name_input">Digite o nome do modelo…</string>
    <string name="year_input">Digite o ano do modelo…</string>
    <string name="energy_consumption_input">Consumo de Energia KwH/km…</string>
    <string name="fuel_consumption_input">Consumo de Combustível Litro/km…</string>
    <string name="wrong_year_error">O ano informado é inválido!</string>
    <string name="image_error">É necessário informar uma imagem!</string>
    <string name="name_error">É necessário informar o nome!</string>
    <string name="year_error">É necessário informar o ano!</string>
    <string name="energy_consumption_error">É necessário informar o consumo de energia! </string>
    <string name="fuel_consumption_error">É necessário informar o consumo de combustível! </string>


    <string name="energy_consumption_label">%s kWh/Km</string>
    <string name="fuel_consumption_label">%s Litros/Km</string>

    <!--    Car-->
    <string name="cars">Meus carros!</string>
    <string name="add_car">Adicione seu carro!</string>
    <string name="name_car_input">Digite o nome do seu carro…</string>
    <string name="selected_car_model_error">É necessário selecionar um modelo de carro!</string>
    <string name="select_car_model">Escolha um modelo</string>

    <!--    Calculate-->
    <string name="calculate">Calcular</string>
    <string name="speed">Digite a velocidade atual (Km/Hora)…</string>
    <string name="current_energy">Digite a quantidade de energia atual…</string>
    <string name="current_fuel">Digite a quantidade de combustível atual…</string>
    <string name="possible"> É possível chegar ao destino!</string>
    <string name="not_possible"> Impossível chegar ao destino!</string>
    <string name="image_error_not_found">Imagem do carro não  encontrada!</string>
    <string name="selected_car">É necessário escolher um carro!</string>
    <string name="until_station">%s Km até o posto.</string>
    <string name="energy_station">Serão gastos %s kWh.</string>
    <string name="fuel_station"> Serão gastos %s litros.</string>
    <string name="distance_error">Informe a distância!</string>
    <string name="energy_error">Informe a energia atual!</string>
    <string name="fuel_error">Informe o combustível atual!</string>
    <string name="select_car">Selecione o carro atual!</string>

<!--  Schedule -->
    <string name="add_time">Adicione um horário…</string>
    <string name="add_date">Adicione uma data…</string>
    <string name="all_users">Todos</string>
    <string name="clients">Clientes </string>
    <string name="admins">Admins</string>

<!--    Location-->
    <string name="error_location">Não foi possível obter a localização atual! Ligue o GPS</string>
    <string name="error_permission_location">Permissão de localização negada</string>
    <!--Login com Google-->
    <string name="default_web_client_id">936668570280-m465psejead5oppnb8a36r52spb7761p.apps.googleusercontent.com</string>


</resources>