<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.users.RegisterAdminActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nameAdminRegister"
        style="@style/EditTextWithBorderBlack"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="469dp"
        android:drawableEnd="@drawable/baseline_person"
        android:handwritingBoundsOffsetRight="@dimen/cardview_compat_inset_shadow"
        android:hint="@string/name"
        android:inputType="text"
        android:singleLine="true"
        android:textColorHint="@color/red_custom" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailAdminRegister"
        style="@style/EditTextWithBorderBlack"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="393dp"
        android:drawableEnd="@drawable/baseline_email"
        android:handwritingBoundsOffsetRight="@dimen/cardview_compat_inset_shadow"
        android:hint="@string/email"
        android:inputType="text"
        android:singleLine="true"
        android:textColorHint="@color/red_custom" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwordConfirmeAdminRegister"
        style="@style/EditTextWithBorderBlack"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="233dp"
        android:drawableEnd="@drawable/baseline_password"
        android:hint="@string/password_confirm"
        android:inputType="text"
        android:singleLine="true"
        android:textColorHint="@color/red_custom" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/RegisterAdminBtn"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="540dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="-4dp"
        android:background="@drawable/button_red"
        android:backgroundTint="@color/red"
        android:end="@id/title"
        android:hint="@string/add"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwordAdminRegister"
        style="@style/EditTextWithBorderBlack"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="313dp"
        android:drawableEnd="@drawable/baseline_password"
        android:hint="@string/Password"
        android:inputType="text"
        android:singleLine="true"
        android:textColorHint="@color/red_custom" />

    <TextView
        android:id="@+id/titleDecorationAdminRegister"
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="78dp"
        android:layout_marginEnd="14dp"
        android:text="@string/title_decoreition_register_admin"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40dp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backButonAdminRegiter"
        android:layout_width="36dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/baseline_arrow_back_"
        android:contentDescription="@string/back_button"
        android:drawableEnd="@drawable/baseline_arrow_back_25" />


    <FrameLayout
        android:id="@+id/frameLayoutAdminRegister"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationMenuUserTelaAdminRegister">

    </FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationMenuUserTelaAdminRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="@color/white"
        app:itemIconSize="27dp"
        app:itemTextColor="@drawable/icon_tint_selector"
        app:itemIconTint="@drawable/icon_tint_selector"
        app:itemActiveIndicatorStyle="@color/red_custom"
        app:itemRippleColor="@color/red_custom"
        app:menu="@menu/menu_admin" />


</RelativeLayout>