<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.users.EditPasswordActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backButonProfilePassword"
        android:layout_width="36dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/baseline_arrow_back_24"
        android:contentDescription="@string/back_button"
        />



    <ImageView
        android:id="@+id/imgBase"
        android:layout_width="match_parent"
        android:layout_height="542dp"
        android:layout_above="@+id/bottomNavigationMenuUser"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="-2dp"
        android:inputType ="textPassword"
        app:srcCompat="@drawable/base_white" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageProfilEditPassword"
        android:layout_width="227dp"
        android:layout_height="171dp"
        android:layout_alignTop="@+id/imgBase"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="92dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="427dp"
        android:background="@drawable/baseline_person"
        android:contentDescription="@string/profile"
        app:civ_border_width="@dimen/cardview_compat_inset_shadow" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editPasswordText"
        style="@style/EditTextWithBorderBlack"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageProfilEditPassword"
        android:layout_marginTop="273dp"
        android:drawableEnd="@drawable/baseline_person"
        android:handwritingBoundsOffsetRight="@dimen/cardview_compat_inset_shadow"
        android:hint="@string/old_password"
        android:inputType="text"
        android:singleLine="true"
        android:textColorHint="@color/red_custom" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editPasswordConfirmText"
        style="@style/EditTextWithBorderBlack"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/editPasswordText"
        android:layout_marginTop="76dp"
        android:drawableEnd="@drawable/baseline_email"
        android:handwritingBoundsOffsetRight="@dimen/cardview_compat_inset_shadow"
        android:hint="@string/new_password"
        android:inputType="text"
        android:singleLine="true"
        android:textColorHint="@color/red_custom" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/editProfileUserBtn"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_alignTop="@+id/editPasswordConfirmText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="42dp"
        android:layout_marginTop="103dp"
        android:layout_marginEnd="42dp"
        android:background="@drawable/button_red"
        android:backgroundTint="@color/red_custom"
        android:text="@string/edit_password"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />


    <FrameLayout
        android:id="@+id/frameLayoutUser"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationMenuUser">

    </FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationMenuUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="@color/white"
        app:itemIconSize="27dp"
        app:itemTextColor="@drawable/icon_tint_selector"
        app:itemIconTint="@drawable/icon_tint_selector"
        app:itemActiveIndicatorStyle="@color/red_custom"
        app:itemRippleColor="@color/red_custom"
        app:menu="@menu/menu_user" />


</RelativeLayout>